force-app/main/default/objects/FEC_Fast_Cash_Info__c/FEC_Fast_Cash_Info__c.object-meta.xml
<CustomObject>
    <label>Fast Cash Info</label>
    <nameField>
        <label>Fast Cash Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fast Cash Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>