force-app/main/default/objects/FEC_Fast_Cash_Info__c/fields/FEC_Conversion_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Conversion_Fee__c</fullName>
    <description>Phí chuyển đổi</description>
    <label>Conversion Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>