force-app/main/default/objects/FEC_Fast_Cash_Info__c/fields/FEC_Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Monthly_Installment__c</fullName>
    <description>Khoản thanh toán hàng tháng</description>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>