force-app/main/default/objects/FEC_Fast_Cash_Info__c/fields/FEC_Registration_Rate__c.field-meta.xml
<CustomField>
    <fullName>FEC_Registration_Rate__c</fullName>
    <label>Registration Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>