force-app/main/default/objects/FEC_Fast_Cash_Info__c/fields/FEC_Tenure__c.field-meta.xml
<CustomField>
    <fullName>FEC_Tenure__c</fullName>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>